--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "PassBit"
-version = "0.1.0"
+version = "0.1.1"
 description = "Open-source cross-platform encrypted password manager"
 readme = "README.md"
 authors = [{name="Kolbanidze"}]
@@ -25,3 +25,5 @@ requires-python = ">=3.6"
 
 [project.urls]
 Homepage = "https://github.com/kolbanidze/passbit"
+
+[tool.setuptools]
